[project]
name = "PU"
version = "0.1.0"
requires-python = ">=3.12.0"
dependencies = [
  "aim>=3.29.0",
  "lightning[pytorch-extra]~=2.5.0",
  "matplotlib>=3.10.0",
  "numpy>=2.3.0",
  "pandas>=2.3.0",
  "scipy>=1.16.0",
  "seaborn>=0.13.0",
  "torchinfo>=1.8.0",
  "torchmetrics>=1.8.0",
]

[dependency-groups]
dev = ["ruff>=0.14.0"]

[project.optional-dependencies]
cpu = ["torch~=2.8.0", "torchvision~=0.23.0"]
cu126 = ["torch~=2.8.0", "torchvision~=0.23.0"]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cu126" }]]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu126", extra = "cu126" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "ANN", "I", "N"]
ignore = ["ANN002", "ANN003", "ANN401"]
unfixable = ["F401"]

[tool.ruff.format]
skip-magic-trailing-comma = true
